tests/ui/cve_2020_35877/minimal.stderr
error: it is an undefined behavior to offset a pointer using an unchecked integer
  --> tests/ui/cve_2020_35877/minimal.rs:4:15
   |
LL |         p = p.add(index);
   |             - ^^^^^^^^^^ offset here
   |             |
   |             pointer used here
   |
   = help: check whether it's in bound before offsetting
   = note: See the safety section in https://doc.rust-lang.org/std/primitive.pointer.html#method.offset

error: it is an undefined behavior to offset a pointer using an unchecked integer
  --> tests/ui/cve_2020_35877/minimal.rs:14:15
   |
LL |         p = p.add(index);
   |             - ^^^^^^^^^^ offset here
   |             |
   |             pointer used here
   |
   = help: check whether it's in bound before offsetting
   = note: See the safety section in https://doc.rust-lang.org/std/primitive.pointer.html#method.offset

error: it is an undefined behavior to offset a pointer using an unchecked integer
  --> tests/ui/cve_2020_35877/minimal.rs:37:15
   |
LL |         p = p.add(index);
   |             - ^^^^^^^^^^ offset here
   |             |
   |             pointer used here
   |
   = help: check whether it's in bound before offsetting
   = note: See the safety section in https://doc.rust-lang.org/std/primitive.pointer.html#method.offset

error: aborting due to 3 previous errors

